# ducksite

./: .gitignore  README.md  _ai_in_out.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt
docs/: ducksearch_demos.md  evidence_research.md  performance_pareto.md  plugins.md  user_manual.md  virtual_parquet_server.md
docs/lessons/: bug-fingerprint-cache-type.md  bug-scan-cache-typed-dict.md  bug-untyped-cache-fallback.md
ducksearch/: __init__.py  __main__.py  cli.py  loader.py  report_parser.py  spec.md
ducksearch/runtime/: __init__.py
ducksearch/server/: __init__.py
ducksite/: __init__.py  auth.py  builder.py  cli.py  compile_cache.py  config.py  cte_compiler.py  data_map_cache.py  data_map_paths.py  demo_init_common.py  demo_init_content.py  demo_init_fake_parquet.py  demo_init_sources_sql.py  demo_init_toml.py  demo_init_virtual_plugin.py  fast_server.py  forms.py  html_kit.py  init_project.py  js_assets.py  markdown_parser.py  queries.py  sternum.py  symlinks.py  tuy_md.py  tuy_plugin.py  tuy_sql.py  tuy_toml.py  tuy_ui.py  utils.py  virtual_parquet.py  watcher.py
ducksite/static_src/: charts.css  duckdb-bundle.js  duckdb_runtime.js  ducksite.css  ducksite_contract.js  forms.js  inputs.js  main.js  page_config.js  page_runtime.js  render.js  sql_editor.js
stubs/textual/: __init__.pyi  app.pyi
tests/: layout_probe_utils.py  test_builder.py  test_ducksearch_api.py  test_ducksearch_cli.py  test_ducksearch_demos.py  test_ducksearch_loader.py  test_ducksearch_parser.py  test_ducksearch_runtime.py  test_ducksearch_server.py  test_ducksearch_spec_compliance.py  test_init_project.py
tests/js/: forms.spec.js  forms_and_filters.spec.js  inputs.spec.js  render.spec.js  render_formatting.spec.js  render_interactions.spec.js  render_layout_pie_sankey.spec.js  render_pictorial_bar.spec.js  render_queries.spec.js  render_radar.spec.js  render_treemap_sunburst.spec.js
tools/: binding_keysql_demo.py  performance_probe.py  plugin_performance_probe.py  snapshot_chart.js
(+40 files in other folders)
